[package]
name = "stock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
comfy-table = "6.1.2"
futures-util = "0.3.25"
hyper = { version = "0.14.22", features = ["full"] }
hyper-tls = "0.5.0"
itertools = "0.10.5"
pin-utils = "0.1.0"
protobuf = "3.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tokio-retry = "0.3.0"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
